fix: debug issue and missing route

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "release": "standard-version",
     "test:local": "jest --setupFiles dotenv/config --ci -i",
     "test:ci": "jest --ci -i",
-    "pub": "nodemon --exec \"DEBUG=DoorCloud:* ts-node -r dotenv/config src/pub.ts\""
+    "pub": "nodemon --exec \"DEBUG=WaterQuality:* ts-node -r dotenv/config src/pub.ts\""
   },
   "author": "AnthonyLzq <sluzquinosa@uni.pe>",
   "license": "MIT",
@@ -57,7 +57,7 @@
     "ignore": [
       "src/**/*.test.ts"
     ],
-    "exec": "DEBUG=DoorCloud:* npx ts-node -r dotenv/config ./src/index"
+    "exec": "DEBUG=WaterQuality:* npx ts-node -r dotenv/config ./src/index"
   },
   "engines": {
     "node": ">=16",
