--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "debug": "^4.3.4",
+    "firebase-admin": "^11.3.0",
     "mqtt": "^4.3.7"
   },
   "nodemonConfig": {
