--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@types/cron": "^2.0.0",
+    "cron": "^2.1.0",
     "debug": "^4.3.4",
     "firebase-admin": "^11.3.0",
     "mqtt": "^4.3.7"
