--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "cron": "^2.1.0",
     "debug": "^4.3.4",
     "firebase-admin": "^11.3.0",
-    "mqtt": "^4.3.7"
+    "mqtt": "^4.3.7",
+    "socket.io": "^4.5.4"
   },
   "nodemonConfig": {
     "watch": [
