--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint src/* --ext .ts",
     "service": "nodemon",
-    "start": "DEBUG=WQ:* ts-node ./src/index",
+    "start": "DEBUG=WaterQuality:* ts-node ./src/index",
     "release": "standard-version",
     "test:local": "jest --setupFiles dotenv/config --ci -i",
     "test:ci": "jest --ci -i",
