--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
   "devDependencies": {
     "@jest/types": "^29.3.1",
     "@types/debug": "^4.1.7",
-    "@types/jest": "^29.2.3",
-    "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
+    "@types/node-cron": "^3.0.7",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
     "dotenv": "^16.0.3",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^27.1.5",
-    "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
@@ -35,21 +36,22 @@
     "jest-mock-extended": "^3.0.1",
     "jest-unit": "^0.0.2",
     "nodemon": "^2.0.20",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.3",
+    "prisma": "^4.9.0",
     "reflect-metadata": "^0.1.13",
-    "ts-jest": "^29.0.3",
-    "ts-loader": "^9.4.1",
+    "ts-jest": "^29.0.5",
+    "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.0",
+    "tsconfig-paths": "^4.1.2",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@types/cron": "^2.0.0",
-    "cron": "^2.1.0",
+    "@prisma/client": "^4.9.0",
     "debug": "^4.3.4",
-    "firebase-admin": "^11.3.0",
+    "firebase-admin": "^11.4.1",
     "mqtt": "^4.3.7",
+    "node-cron": "^3.0.2",
     "socket.io": "^4.5.4"
   },
   "nodemonConfig": {
@@ -61,7 +63,7 @@
     "ignore": [
       "src/**/*.test.ts"
     ],
-    "exec": "DEBUG=WQ:* npx ts-node -r dotenv/config ./src/index"
+    "exec": "DEBUG=WaterQuality:* npx ts-node -r dotenv/config ./src/index"
   },
   "engines": {
     "node": ">=16",
