--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "firebase-admin": "^11.4.1",
     "mqtt": "^4.3.7",
     "node-cron": "^3.0.2",
-    "socket.io": "^4.5.4"
+    "socket.io": "^4.5.4",
+    "zod": "^3.20.2"
   },
   "nodemonConfig": {
     "watch": [
