feat: improved mvp

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,20 @@
-MQTT_USER = ''
-MQTT_PASS = ''
-MQTT_HOST = ''
-MQTT_PORT = 8883
+FIREBASE_AUTH_PROVIDER_X509_CERT_URL =
+FIREBASE_AUTH_URI =
+FIREBASE_CLIENT_EMAIL =
+FIREBASE_CLIENT_ID =
+FIREBASE_PRIVATE_KEY =
+FIREBASE_PRIVATE_KEY_ID =
+FIREBASE_PROJECT_ID =
+FIREBASE_REAL_TIME_DB =
+FIREBASE_TOKEN_URI =
+FIREBASE_TYPE =
+FIREBASE_X509_CERT =
+FRONT_URL =
+GOOGLE_APPLICATION_CREDENTIALS =
+
+MQTT_USER =
+MQTT_PASS =
+MQTT_HOST =
+MQTT_PORT =
+
+NODE_ENV =
