feat: updated .env.example

--- a/.env.example
+++ b/.env.example
@@ -9,12 +9,15 @@ FIREBASE_REAL_TIME_DB =
 FIREBASE_TOKEN_URI =
 FIREBASE_TYPE =
 FIREBASE_X509_CERT =
-FRONT_URL =
-GOOGLE_APPLICATION_CREDENTIALS =
+GOOGLE_APPLICATION_CREDENTIALS = 'firebase.json'
 
 MQTT_USER =
 MQTT_PASS =
 MQTT_HOST =
 MQTT_PORT =
 
-NODE_ENV =
+NODE_ENV = 'local'
+
+DATABASE_URL = ''
+
+FRONT_URL = 'http://localhost:3000'
